--- a/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
+++ b/src/app/protected/cranix/users/lists/manage-parents/manage-parents.component.html
@@ -28,13 +28,20 @@
 </ion-segment>
 @if(segment == 'ptm'){
 <ion-content>
-    @if(selectedPTM){
     <form #addEditPTMForm="ngForm">
         <ion-toolbar class="page-toolbar">
+            @if(selectedPTM){
             @if(selectedPTM.id > 0){
             <ion-title>{{'Edit parent teacher meeting'|translate}} </ion-title>
             }@else{
             <ion-title>{{'Create parent teacher meeting'|translate}} </ion-title>
+            }
+            }@else{
+            @if(loadingData){
+            <ion-title>{{'Loading data'|translate}} ...</ion-title>
+            }@else{
+            <ion-title>{{'Select or create parent teacher meeting'|translate}}</ion-title>
+            }
             }
             <ion-buttons slot="end">
                 <ion-button (click)="isSelectPtmOpen = true" fill="solid" matTooltip="{{'Select PTM'|translate}}">
@@ -56,12 +63,13 @@
                     matTooltip="{{'Register students rooms and teachers for the PTM'|translate}}">
                     <ion-icon slot="icon-only" color="tertiary" name="people"></ion-icon>
                 </ion-button>
-                <ion-button (click)="isDeletePtmOpen" fill="solid" [disabled]="selectedPTM.id == 0"
+                <ion-button (click)="presentDeleteAlert()" fill="solid" [disabled]="!selectedPTM || selectedPTM.id == 0"
                     matTooltip="{{'Remove PTM'|translate}}">
                     <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
                 </ion-button>
             </ion-buttons>
         </ion-toolbar>
+        @if(selectedPTM){
         <ion-list>
             <ion-item>
                 <ion-input [(ngModel)]="selectedPTM.title" name="title" label="{{'Title'|translate}}*"
@@ -74,25 +82,27 @@
             <ion-item>
                 <ion-label>{{'From'|translate}}*</ion-label>
                 <input [(ngModel)]="selectedPTM.start" name="startTime" type="datetime-local" required
-                    (change)="startTimeSet()" [disabled]="selectedPTM.ptmTeacherInRoomList.length > 0"/>
+                    (change)="startTimeSet()" [disabled]="selectedPTM.ptmTeacherInRoomList.length > 0" />
             </ion-item>
             <ion-item>
                 <ion-label>{{'Until'|translate}}*</ion-label>
                 <input [(ngModel)]="selectedPTM.end" name="endTime" type="datetime-local" required
-                    [disabled]="selectedPTM.ptmTeacherInRoomList.length > 0"/>
+                    [disabled]="selectedPTM.ptmTeacherInRoomList.length > 0" />
             </ion-item>
             <ion-item>
                 <ion-label>{{'Duration of a Session'|translate}}*</ion-label>
                 <input [(ngModel)]="selectedPTM.duration" name="duration" type="number" required
-                    [disabled]="selectedPTM.ptmTeacherInRoomList.length > 0"/>{{'Minutes'|translate}}
+                    [disabled]="selectedPTM.ptmTeacherInRoomList.length > 0" />{{'Minutes'|translate}}
             </ion-item>
             <ion-item>
                 <ion-label>{{'Start Parent Registration'|translate}}*</ion-label>
-                <input [(ngModel)]="selectedPTM.startRegistration" name="startRegistration" type="datetime-local" required/>
+                <input [(ngModel)]="selectedPTM.startRegistration" name="startRegistration" type="datetime-local"
+                    required />
             </ion-item>
             <ion-item>
                 <ion-label>{{'End Parent Registration'|translate}}*</ion-label>
-                <input [(ngModel)]="selectedPTM.endRegistration" name="endRegistration" type="datetime-local" required/>
+                <input [(ngModel)]="selectedPTM.endRegistration" name="endRegistration" type="datetime-local"
+                    required />
             </ion-item>
             @if(isUpcomming || selectedPTM.id == 0){
             <ion-item>
@@ -132,12 +142,8 @@
             </ion-item>
             }
         </ion-list>
+        }
     </form>
-    }@else{
-    <ion-toolbar class="page-toolbar">
-        <ion-title>{{'Loading data'|translate}} ...</ion-title>
-    </ion-toolbar>
-    }
 </ion-content>
 }@else{
 <ion-toolbar class="page-toolbar">
@@ -202,7 +208,8 @@
                 </ion-item>
                 <ion-item>
                     <ion-label>{{'Select children for the parent' | translate}}</ion-label>
-                    <cranix-search objectType="user" [(selectedItems)]="selectedChildren" name="selectedChildren" [inputData]="children"></cranix-search>
+                    <cranix-search objectType="user" [(selectedItems)]="selectedChildren" name="selectedChildren"
+                        [inputData]="children"></cranix-search>
                     <!-- ionic-selectable #ionicSelectChildren itemValueField="id" itemTextField="fullName"
                         [isMultiple]="true" [(ngModel)]="selectedChildren" [ngModelOptions]="{standalone: true}"
                         [items]="children" [canSearch]="true" groupValueField="classes" groupTextField="classes">
@@ -255,17 +262,6 @@
                 </ion-item>
             </ion-list>
             }
-        </ion-content>
-    </ng-template>
-</ion-modal>
-<ion-modal [isOpen]="isDeletePtmOpen">
-    <ng-template>
-        <ion-content>
-            {{'Do you realy want to delete?'|translate}}
-            <ion-item>
-                <ion-button (click)="isDeletePtmOpen = false">{{'Cancel'|translate}}</ion-button>
-                <ion-button (click)="deletePtm(selectedPTM.id)">OK</ion-button>
-            </ion-item>
         </ion-content>
     </ng-template>
 </ion-modal>
