--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -16,6 +16,10 @@
         <ion-icon name="people-circle" ></ion-icon>
         <ion-label>{{ 'Parents' | translate }}</ion-label>
       </ion-tab-button>
+      <ion-tab-button *ngIf="authService.isAllowed('idrequest.manage')" tab="idcards" >
+        <ion-icon name="id-card" ></ion-icon>
+        <ion-label>{{ 'Parents' | translate }}</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
 
