Implementing add new id request

--- a/src/app/protected/cranix/profile/tabs/myself/myself.component.html
+++ b/src/app/protected/cranix/profile/tabs/myself/myself.component.html
@@ -32,7 +32,10 @@
     </ion-item>
     @if(idRequestUse){
     <ion-item>
-      <ion-icon slot="start" name="id-card"></ion-icon>
+      <ion-avatar>
+        <img [src]="picture">
+      </ion-avatar>
+      <!-- ion-icon slot="start" name="id-card"></ion-icon -->
       <ion-label>{{'ID Card'|translate}}</ion-label>
       @if(myIdRequest.allowed){
       <ion-button fill="clear" [href]="myIdRequest.googleUrl">
