Now we can create and update idRequest

--- a/src/app/protected/cranix/profile/tabs/myself/myself.component.html
+++ b/src/app/protected/cranix/profile/tabs/myself/myself.component.html
@@ -32,10 +32,7 @@
     </ion-item>
     @if(idRequestUse){
     <ion-item>
-      <ion-avatar>
-        <img [src]="picture">
-      </ion-avatar>
-      <!-- ion-icon slot="start" name="id-card"></ion-icon -->
+      <ion-icon slot="start" name="id-card"></ion-icon>
       <ion-label>{{'ID Card'|translate}}</ion-label>
       @if(myIdRequest.allowed){
       <ion-button fill="clear" [href]="myIdRequest.googleUrl">
