Improve look of the list of th id cards

--- a/src/app/protected/cranix/users/lists/id-cards/id-cards.component.css
+++ b/src/app/protected/cranix/users/lists/id-cards/id-cards.component.css
@@ -6,3 +6,11 @@
     padding: 10px; /* Innenabstand */
     text-align: center; /* Text zentrieren */
   }
+
+.button-no-margit {
+  margin-left: 0 !important;
+}
+
+ion-button {
+  margin-left: 0 !important;
+}
