--- a/src/app/protected/cranix/profile/tabs/myself/myself.component.html
+++ b/src/app/protected/cranix/profile/tabs/myself/myself.component.html
@@ -36,14 +36,14 @@
       <ion-label>{{'ID Card'|translate}}</ion-label>
       @if(myIdRequest.allowed){
       <ion-button fill="clear" [href]="myIdRequest.googleUrl">
-        <!-- img src="assets/icon/google-wallet-primary.png" -->
         <ion-icon slot="icon-only" name="google-add-wallet" style="height: 15mm; width: 40mm;"></ion-icon>
       </ion-button>
       <ion-button fill="clear" [href]="myIdRequest.appleUrl">
         <ion-icon slot="icon-only" name="apple-add-wallet" style="height: 15mm; width: 40mm;"></ion-icon>
       </ion-button>
-      <!-- a [href]="myIdReques.googleUrl"><img src="assets/icon/google-wallet-primary.png"></a>
-      <a [href]="myIdReques.appleUrl"><img src="assets/icon/apple-wallet-primary.png"></a -->
+      <ion-button fill="clear" size="large" (click)="deleteId()">
+        <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+      </ion-button>
       }@else{
       @if(myIdRequest.comment){
         <ion-label>
@@ -55,10 +55,10 @@
       @if(picture){
       <img [src]="picture">
       }
-      <ion-button fill="clear" (click)="takePhoto()">
+      <ion-button fill="clear" size="large" (click)="takePhoto()">
         <ion-icon slot="icon-only" name="camera"></ion-icon>
       </ion-button>
-      <ion-button fill="clear" (click)="findPhoto()">
+      <ion-button fill="clear" size="large" (click)="findPhoto()">
         <ion-icon slot="icon-only" name="images"></ion-icon>
       </ion-button>
       <!-- ion-input label="{{'Upload foto'}}" type="file" (change)="uploadImage($event)"></ion-input -->
