Now we can release 36 card requests at ones.

--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -18,7 +18,7 @@
       </ion-tab-button>
       <ion-tab-button *ngIf="authService.isAllowed('idrequest.manage')" tab="idcards" >
         <ion-icon name="id-card" ></ion-icon>
-        <ion-label>{{ 'ID Cards' | translate }}</ion-label>
+        <ion-label>{{ 'ID-Cards' | translate }}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
