--- a/src/app/protected/cranix/users/lists/id-cards/id-cards.component.html
+++ b/src/app/protected/cranix/users/lists/id-cards/id-cards.component.html
@@ -53,7 +53,7 @@
 }@else{
 <ion-item>
     <ion-toggle justify="start" [(ngModel)]="overView" name="openedOnly">{{'Overview'|translate}}</ion-toggle>
-    <ion-button (click)="release()" [disablded]="releasing">{{'Release all shown cards'|translate}}</ion-button>
+    <ion-button (click)="release()" [disabled]="releasing">{{'Release all shown cards'|translate}}</ion-button>
 </ion-item>
 <ion-grid>
     <ion-row>
